assets/css/main.css
/* ... */
#full-page-2 {
    background: #ffffff;
    padding-top: 5%;
}

#full-page-2 .section-action-button {
    color: black;
}

#full-page-2 .section-action-button:hover {
    color: black;
}

#full-page-2 .section-action-button:after {
    background: black;
}

#full-page-2 img {
    max-height: 90vh;
    max-width: 90vw;
    left: 50%;
    transform: translateX(-50%);
    position: relative;
}

#full-page-2-text {
    color: black;
    /*top: 50%;*/
    /*left: 50%;*/
    /*transform: translate(-50%, -50%);*/
    position: relative;
    padding: 5%;
    z-index: 3;
}

#full-page-3 {
    background: #0c326e;
    position: relative;
}

#full-page-3-text {
    color: white;
    /*width: 100vw;*/
    /*top: 50%;*/
    /*left: 50%;*/
    /*transform: translate(-50%, -50%);*/
    /*position: relative;*/
    padding: 5%;
}

#full-page-3-front {
    z-index: 0;
    max-width: 95vw;
    max-height: 100vh;
    position: relative;
    left: 50%;
    transform: translateX(-50%);
}

#full-page-3-back {
    z-index: 0;
    height: 50vh;
    position: absolute;
    top: 5%;
    left: 2%;
    display: none;
}

#full-page-4-text {
    position: relative;
    top: 20%;
    padding: 2em;
}

.emphasis-span {
    color: #ffd9a9;
}

@media (min-width: 1200px) {
    html {
        scroll-snap-type: y mandatory;
    }

    .full-page {
        height: 100vh;
        position: relative;
        /*z-index: 2;*/
        overflow-x: hidden;
        scroll-snap-align: start;
    }

    #full-page-1-text {
        width: 45vw;
        top: 50%;
        left: 50%;
        padding: 0;
        transform: translate(-50%, -50%);
        position: relative;
    }

    #full-page-2-text {
        /*color: rgb(73, 80, 103);*/
        color: black;
        width: 40em;
        top: 50%;
        /*left: 3%;*/
        transform: translate(0, -50%);
        position: relative;
        z-index: 5;
    }

    #full-page-2-text p {
        color: rgb(0, 0, 0);
    }

    #full-page-2 img {
        z-index: 0;
        position: absolute;
        height: 90vh;
        top: 50%;
        left: 40%;
        transform: translate(0, -50%)
    }

    #full-page-3-text {
        color: white;
        width: 40em;
        top: 50%;
        left: 75%;
        transform: translate(-50%, -50%);
        position: relative;
        text-align: right;
        z-index: 5;
    }

    #full-page-3-front {
        z-index: 1;
        height: 40em;
        min-height: 80vh;
        max-height: 94vh;
        max-width: 60vw;
        position: absolute;
        top: 50%;
        transform: translate(0, -50%);
        left: 5%;
    }

    #full-page-3-back {
        z-index: 0;
        height: 45em;
        min-height: 80vh;
        max-height: 94vh;
        max-width: 60vw;
        position: absolute;
        top: 5%;
        left: 2%;
        display: inline;
    }

    #full-page-4-text {
        max-width: 45vw;
        left: 5%;
    }
}

.section-action-button {
    color: white;
    display: inline;
    position: relative;
    overflow: hidden;
}

.section-action-button:hover {
    color: white;
}

.section-action-button:after {
    content: "";
    position: absolute;
    z-index: -1;
    left: 0;
    right: 100%;
    bottom: -4px;
    background: #fff;
    height: 2px;
    transition-property: left, right;
    transition-duration: 0.3s;
    transition-timing-function: ease-out;
}

.section-action-button:hover:after,
.section-action-button:focus:after,
.section-action-button:active:after {
    right: 0;
}

.grecaptcha-badge {
    visibility: hidden;
}

.vmss60-footer {
    position: static;
    text-align: center;
}

@media (min-width: 1200px) {
    .vmss60-footer {
        position: absolute;
        bottom: 0;
        right: 0;
        text-align: right;
        color: white;
    }
}

.vmss60-footer-text {
    bottom: 3em;
    right: 3em;
}

.quarter-circle-bottom-right {
    display: none;
}

@media (min-width: 576px) {
    .quarter-circle-bottom-right {
        width: 25vw;
        height: 25vw;
        background: #ff8927;
        border-radius: 25vw 0 0 0;
        -moz-border-radius: 25vw 0 0 0;
        -webkit-border-radius: 25vw 0 0 0;
        display: block;
    }
}

.navbar {
    position: fixed;
    width: 100%;
    z-index: 999;
    top: 2em;
}
.navbar-icon {
    position: fixed;
    right: 2em;
    top: 2em;
    background-image: url(~assets/images/menu.svg);
    display: none;
    z-index: 999
}
.navbar-icon.black {
    background-image: url(~assets/images/menu_black.svg);
}
.navbar-item-container {
    display: flex;
    width: 100%;
    align-content: center;
    justify-content: center;
}

.navbar-item {
    border: 1px solid white;
    color: white;
    padding: 0.25em 1em;
    border-radius: 1em;
    transition: color ease 0.25s, border ease 0.25s;
    margin-bottom: 1em;
}

.navbar-item.first {
    border-radius: 0;
}

.navbar-item:hover {
    color: rgba(255, 255, 255, 0.75);
    border: 1px solid rgba(255, 255, 255, 0.75);
}

.navbar-line-container {
    width: 3em;
    margin-bottom: 1em;
    display: flex;
    justify-content: center;
    align-items: center;
}

.navbar-line {
    height: 1px;
    width: 100%;
    border-top: 1px solid white;
}

/* Invert */
.navbar-line.black {
    border-top: 1px solid black;
}

.navbar-item.black:hover {
    color: rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(0, 0, 0, 0.5);
}

.navbar-item.black {
    color: black;
    border: 1px solid black;
}
/* ... */

